--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
       <meta charset="utf-8">
       <meta http-equiv="x-ua-compatible" content="ie=edge">
-      <title>React Data Slider</title>
+      <title>React Image Slider</title>
       <meta name="description" content="Anagha Sarees - Browse our curated selection of handloom silk, silk cotton sarees, fancy cotton, designer, trendy semi-silk, rich cotton and cotton-silk sarees.">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700|Vidaloka">
