--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700|Vidaloka">
       <link rel="stylesheet" href="dist/style.css">
-      <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
+      <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
     </head>
     <body>
       <div id="root"></div>
